@@ -2,103 +2,173 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.repository.MessageRepository;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Repository;
 
 import java.io.*;
-import java.nio.file.*;
-import java.util.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.time.Instant;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
+@Repository("fileMessageRepository")
 public class FileMessageRepository implements MessageRepository {
+    private final Path DIRECTORY;
+    private final String EXTENSION = ".ser";
 
-    private final Path messageDirectory;
-
-    public FileMessageRepository() throws IOException {
-        messageDirectory = Path.of("data", "messages");
-        if (!Files.exists(messageDirectory)) {
-            Files.createDirectories(messageDirectory);
+    public FileMessageRepository(@Value("${discodeit.repository.file-directory}")String fileDirectory) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), "file-data-map", Message.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
+            try {
+                Files.createDirectories(DIRECTORY);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
         }
     }
 
-    private Path getMessageFile(UUID id) {
-        return Path.of(messageDirectory.toString(), id.toString() + ".ser");
+    private Path resolvePath(UUID id) {
+        return DIRECTORY.resolve(id + EXTENSION);
     }
 
     @Override
-    public void save(Message message) throws IOException {
-        Path filePath = getMessageFile(message.getId());
-        FileOutputStream fos = new FileOutputStream(filePath.toFile());
-        ObjectOutputStream oos = new ObjectOutputStream(fos);
-        oos.writeObject(message);
-        oos.close();
-        fos.close();
-    }
-
-    @Override
-    public Message findById(UUID id) throws IOException, ClassNotFoundException {
-        Path filePath = getMessageFile(id);
-        if (!Files.exists(filePath)) return null;
-
-        FileInputStream fis = new FileInputStream(filePath.toFile());
-        ObjectInputStream ois = new ObjectInputStream(fis);
-
-        Message message;
-        message = (Message) ois.readObject();
-        ois.close();
-        fis.close();
-
+    public Message save(Message message) {
+        Path path = resolvePath(message.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
+            oos.writeObject(message);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         return message;
     }
 
     @Override
-    public Message findByContent(String content) throws IOException, ClassNotFoundException {
-        try (Stream<Path> paths = Files.list(messageDirectory)) {
-            List<Path> pathList = paths.toList();
-            for (Path path : pathList) {
-                FileInputStream fis = new FileInputStream(path.toFile());
-                ObjectInputStream ois = new ObjectInputStream(fis);
-
-                Message message;
-                message = (Message) ois.readObject();
-
-                ois.close();
-                fis.close();
-
-                if (message.getContent().equals(content)) {
-                    return message;
-                }
+    public Optional<Message> findById(UUID id) {
+        Message messageNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
+            try (
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+                messageNullable = (Message) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
             }
         }
-        return null;
+        return Optional.ofNullable(messageNullable);
     }
 
     @Override
-    public List<Message> findAll() throws IOException, ClassNotFoundException {
-        List<Message> messages = new ArrayList<>();
-
-        try (Stream<Path> paths = Files.list(messageDirectory)) {
-            List<Path> pathList = paths.toList();
-            for (Path path : pathList) {
-                FileInputStream fis = new FileInputStream(path.toFile());
-                ObjectInputStream ois = new ObjectInputStream(fis);
-                 messages.add((Message) ois.readObject());
-                 ois.close();
-                 fis.close();
-
-            }
+    public List<Message> findAll() {
+        try {
+            return Files.list(DIRECTORY)
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (Message) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .collect(Collectors.toList());
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
-
-        return messages;
     }
 
     @Override
-    public void update(Message message) throws IOException {
-        delete(message.getId());
-        save(message);
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
     }
 
     @Override
-    public void delete(UUID id) throws IOException {
-        Files.deleteIfExists(getMessageFile(id));
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
+        try {
+            Files.deleteIfExists(path);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    @Override
+    public void deleteByChannelId(UUID channelId) {
+        try {
+            Files.list(DIRECTORY)
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .forEach(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            Message msg = (Message) ois.readObject();
+                            if (msg.getChannelId().equals(channelId)) {
+                                Files.deleteIfExists(path);
+                            }
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    });
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    @Override
+    public Optional<Instant> findMostRecentMessageTime(UUID channelId) {
+        try {
+            return Files.list(DIRECTORY)
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (Message) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .filter(message -> message.getChannelId().equals(channelId))
+                    .map(Message::getCreatedAt)
+                    .max(Comparator.naturalOrder());
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    @Override
+    public List<Message> findAllByChannelId(UUID channelId) {
+        try {
+            return Files.list(DIRECTORY)
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (Message) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .filter(message -> message.getChannelId().equals(channelId))
+                    .collect(Collectors.toList());
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
