@@ -2,88 +2,118 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.repository.UserRepository;
+import org.springframework.stereotype.Repository;
 
 import java.io.*;
-import java.nio.file.*;
-import java.util.*;
-import java.util.stream.Stream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 
+@Repository("fileUserRepository")
 public class FileUserRepository implements UserRepository {
-    private final Path userDirectory;
+    private final Path DIRECTORY;
+    private final String EXTENSION = ".ser";
 
-    public FileUserRepository() throws IOException {
-        this.userDirectory = Path.of("data", "users");
-        if (!Files.exists(userDirectory)) {
-            Files.createDirectories(userDirectory);
+    public FileUserRepository() {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), "file-data-map", User.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
+            try {
+                Files.createDirectories(DIRECTORY);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
         }
     }
 
-    private Path getUserFile(UUID id) {
-        return Path.of(userDirectory.toString(), id.toString() + ".ser");
+    private Path resolvePath(UUID id) {
+        return DIRECTORY.resolve(id + EXTENSION);
     }
 
     @Override
-    public void save(User user) throws IOException {
-        Path filePath = getUserFile(user.getId());
-        FileOutputStream fos = new FileOutputStream(filePath.toFile());
-        ObjectOutputStream oos = new ObjectOutputStream(fos);
-        oos.writeObject(user);
-        oos.close();
-        fos.close();
-    }
-
-    @Override
-    public User findById(UUID id) throws IOException, ClassNotFoundException {
-        Path filePath = getUserFile(id);
-        if (!Files.exists(filePath)) return null;
-
-        FileInputStream fis = new FileInputStream(filePath.toFile());
-        ObjectInputStream ois = new ObjectInputStream(fis);
-        User user = (User) ois.readObject();
-        ois.close();
-        fis.close();
+    public User save(User user) {
+        Path path = resolvePath(user.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
+            oos.writeObject(user);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         return user;
     }
 
     @Override
-    public User findByName(String name) throws IOException, ClassNotFoundException {
-        try (Stream<Path> paths = Files.list(userDirectory)) {
-            for (Path filePath : paths.toList()) {
-                FileInputStream fis = new FileInputStream(filePath.toFile());
-                ObjectInputStream ois = new ObjectInputStream(fis);
-                User user = (User) ois.readObject();
-                ois.close();
-                fis.close();
-                if (user.getName().equals(name)) {
-                    return user;
-                }
+    public Optional<User> findById(UUID id) {
+        User userNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
+            try (
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+                userNullable = (User) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
             }
         }
-        return null;
+        return Optional.ofNullable(userNullable);
     }
 
     @Override
-    public List<User> findAll() throws IOException, ClassNotFoundException {
-        List<User> users = new ArrayList<>();
-        try (Stream<Path> paths = Files.list(userDirectory)) {
-            for (Path filePath : paths.toList()) {
-                FileInputStream fis = new FileInputStream(filePath.toFile());
-                ObjectInputStream ois = new ObjectInputStream(fis);
-                users.add((User) ois.readObject());
-                ois.close();
-                fis.close();
-            }
+    public Optional<User> findByUsername(String username) {
+        return Optional.empty();
+    }
+
+    @Override
+    public List<User> findAll() {
+        try {
+            return Files.list(DIRECTORY)
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (User) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .toList();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
-        return users;
     }
 
     @Override
-    public void update(User user) throws IOException {
-        save(user);
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
     }
 
     @Override
-    public void delete(UUID id) throws IOException {
-        Files.deleteIfExists(getUserFile(id));
+    public boolean existsByName(String name) {
+        return findAll().stream()
+                .anyMatch(user -> user.getUsername().equals(name));
+    }
+
+    @Override
+    public boolean existsByEmail(String email) {
+        return findAll().stream()
+                .anyMatch(user -> user.getEmail().equals(email));
+    }
+
+    @Override
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
+        try {
+            Files.delete(path);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
